# tap-rokt

./: README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_rokt/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
